--- a/dgconstraint/vignette/evolve-resequence_dgconstraint.Rmd
+++ b/dgconstraint/vignette/evolve-resequence_dgconstraint.Rmd
@@ -18,8 +18,8 @@ The `dgconstraint` package provides functions for calculating the constraint met
   + Once you have found useful data it needs to be saved in .csv format. We recommend naming files `AuthorYear` but any file name without spaces or special characters is fine. 
   + You have `data-in` and `data-out` folders in your working directory: `data-in` will contain the data to analyze (i.e., the .csv files), analysis will be written to the `data-out` folder
   + Decide which function to use with your data:
-    + `single_generation_wide`: sequencing data was obtained from a single generation. Mutation presence/absence is in a separate column for each population. Population information is located in the column header.
-    + `single_generation_long`: sequencing data was obtained from a single generation. Mutation presence/absence is in a single column. Population information is indicated in a single, separate column.
+    + `single_wide`: sequencing data was obtained from a single generation. Mutation presence/absence is in a separate column for each population. Population information is located in the column header.
+    + `single_long`: sequencing data was obtained from a single generation. Mutation presence/absence is in a single column. Population information is indicated in a single, separate column.
     + `multiple_wide`: sequencing data was obtained from multiple generations or treatments (indicated in the columnn headers). Mutation presence/absence is in a separate column for each. Population information is located in a single, separate column.
     + `multiple_long`: sequencing data was obtained from multiple generations or treatments. Mutation presence/absence is in a single column. Generation/treatment is indicated in a single column. Population information is located in a single column.
   
@@ -108,7 +108,7 @@ By now you should have made your files, chosen a dataset you want to analysis an
 And now you are ready to start analyzing your data!  
 I will use the multiple generations function as an example for the walk-through.  
 
-* *multigen_c_hyper(paper, environment, species, generations)* is the function we are using:    
+* *multiple_wide(paper, environment, species, generations)* is the function we are using:    
   + set the parameter *paper* = "Author2018"  
   + set the parameter *environment* to the environment used in the experiment, lets say "YPD"  
   + set the parameter *species* to either Sac" or "Ecoli_K12" or "Ecoli_O157-H7", lets say "Sac".  
@@ -116,7 +116,7 @@ I will use the multiple generations function as an example for the walk-through.
   
 And so your function will look like this:  
 ```{r, eval=FALSE}
-multigen_c_hyper(paper = "Author2018", environment = "YPD", species = "Sac", generations = c("0", "100", "500", "1000", "1500"))  
+multiple_wide(paper = "Author2018", environment = "YPD", species = "Sac", generations = c("0", "100", "500", "1000", "1500"))  
 ```
 
 Your function should be good to go!  
@@ -131,7 +131,7 @@ If you come across an error while running your function:
 * Make sure the column names are correct, it is easy to forget to change a column name gene to the needed one *Gene*. The code is ran in a way that it will recognize *Gene* and not gene. Same goes for *Population*, *Frequency* and *Selective_pressure*.    
 * Lastly, if there is an error when it tries to calculate the c-hyper, that could be due to lack of parallelism, populations or genes in that generation/selective pressure. If you are unsure, take a look at the original data to see if it matches the conclusion of no parallelism.      
   
-## Calculations for a Multiple Generation Function  
+## Calculations for a Multiple Wide Dataset  
 This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the	estimates of the effective proportion of adaptive loci for a data set with multiple generations.
 
 ### Data  
@@ -152,7 +152,7 @@ multigen_c_hyper(paper, environment, species, generations)
 ```
 
 If we use the data above as an example, then the function would look like this:  
-*multigen_c_hyper("Author2014", "YPD", "Sac", c("0", "140", "240", "335", "415", "505", "585", "665", "745", "825", "910", "1000"))*  
+*multiple_wide("Author2014", "YPD", "Sac", c("0", "140", "240", "335", "415", "505", "585", "665", "745", "825", "910", "1000"))*  
 
 ### Results  
 The package will give you the results in a table with all the information and calculations such as the paper, environment, generations, c-hyper, p-value, estimate, number of populations, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
@@ -163,7 +163,7 @@ knitr::include_graphics("figures/Lang_2.png")
 ```
 The analysis will be automatically saved into the data-out folder that you created beforehand.
 
-## Calculations for Multiple Selective Pressure Function  
+## Calculations for Multiple Long Dataset  
 This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with  multiple selective pressures.  
 
 ### Data  
@@ -177,9 +177,9 @@ knitr::include_graphics("figures/Jerison_1.png")
 Here we can see that the selective pressures are OT(Optimal Temperature) and HT(High Temperature).  
 ex: *Gene* AFI1 has a *Frequency* of 0.6666667 in the *Population* LK5-F08 with the *Selective_pressure* HT.  
 
-Now we have to fill in the parameters in the function: *multipressure_c_hyper(paper, environment, species, Selective_pressure)*  
+Now we have to fill in the parameters in the function: *multiple_long(paper, environment, species, selective_pressure)*  
 If we use the data above as an example, then the function would look like this:  
-*multipressure_c_hyper("Author2017", "YPD", "Ecoli_K12", c("OT", "HT"))*   
+*multiple_long("Author2017", "YPD", "Ecoli_K12", c("OT", "HT"))*   
 
 ### Results  
 The package will give you the results in a table with all the information and calculations such as the paper, environment, selective_pressure, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.    
@@ -190,7 +190,7 @@ knitr::include_graphics("figures/Jerison_2.png")
 ```
 The analysis will be automatically saved into the data-out folder that you created beforehand.  
 
-## Calculations for a Single Generation Function in Matrix Form  
+## Calculations for a Single Wide Dataset  
 This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with a single generation in a matrix form.   
 
 ### Data  
@@ -204,9 +204,9 @@ knitr::include_graphics("figures/Sandberg_2.png")
 Here we can see that we have the *Population* as the column names, (ALE1, ALE2, ALE3, ALE4, ALE5, ALE6, ALE7, ALE8, ALE9 and ALE10), and the *Gene* as the row names. This data represents only one generation, usually the end point, and thus indicates a 1 if the *Gene* was present, and a 0 if the *Gene* was absent.    
 ex: The *Gene* cbpA was only present in the *Population* ALE2 at this time point.  
 
-Now we have to fill in the parameters in the function: *singlematrix_c_hyper(paper, environment, species, population)*
+Now we have to fill in the parameters in the function: *single_wide(paper, environment, species, population)*
 If we use the data above as an example, then the function would look like this:  
-*singlematrix_c_hyper("Author2014", "glucose minimal media", "Ecoli_K12", c("ALE1", "ALE2", "ALE3", "ALE4", "ALE5", "ALE6", "ALE7", "ALE8", "ALE9", "ALE10"))*  
+*single_wide("Author2014", "glucose minimal media", "Ecoli_K12", c("ALE1", "ALE2", "ALE3", "ALE4", "ALE5", "ALE6", "ALE7", "ALE8", "ALE9", "ALE10"))*  
 
 ### Results  
 The package will give you the results in a table with all the information and calculations such as the paper, environment, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
@@ -217,7 +217,7 @@ knitr::include_graphics("figures/Sandberg_3.png")
 ```
 The analysis will be automatically saved into the data-out folder that you created beforehand.  
 
-## Calculations for a Single Generation Functionin Non-Matrix Form  
+## Calculations for a Single Long Dataset  
 This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with a single generation.
 
 ### Data  
@@ -231,9 +231,9 @@ knitr::include_graphics("figures/McCloskey_1.png")
 Here we can see that we have a *Population* column, a *Gene* column and a *Frequency* column.  
 ex: The *Gene* araA in the *Population* Evo04ptsHIcrrEvo03EP has a *Frequency* of 0.738 at this time point.  
 
-Now we have to fill in the parameters in the function: *singlegen_c_hyper(paper, environment, species)*  
+Now we have to fill in the parameters in the function: *single_long(paper, environment, species)*  
 If we use the data above as an example, then the function would look like this:  
-*singlegen_c_hyper("Author2018", "YPD", "Ecoli_K12")*  
+*single_long("Author2018", "YPD", "Ecoli_K12")*  
 
 ### Results  
 The package will give you the results in a table with all the information and calculations such as the paper, environment, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
